+added gauge directive

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
     "DNS": "Registrar",
     "DNS-server": "Name Server",
     "alexa-rank": "Alexa Rank",
+    "tags": "Tags",
     "user-marks": "User Marks",
 
     "c2server": "c2server({{value}})",
