--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -9,6 +9,15 @@
     "language": "Language",
     "upload-tooltip": "上传文件"
   },
+  "footer": {
+    "guide": "向导",
+    "api": "API",
+    "about": "关于",
+    "terms-of-service": "服务条款",
+    "privacy-policy": "隐私政策",
+    "change-log-partner": "更新日志",
+    "partner": "合作伙伴"
+  },
   "search": {
     "example": "样例： manage-163-account.com 82.165.37.26 DarkHotel 数字签名 文件",
     "input": "IP、域名、文件HASH(MD5/SHA1/SHA256)"
@@ -35,8 +44,30 @@
     "phishing": "钓鱼网站({{value}})",
 
     "intelligence": "威胁情报",
-    "IP": "IP分析",
-    "sub-domains": "子域名",
+    "IP": {
+      "title": "IP分析",
+      "address": "IP地址",
+      "location": "地理位置",
+      "ASN": "ASN",
+
+      "history": "历史解析记录",
+      "time": "时间",
+      "IP": "IP",
+      "region": "国家",
+      "province": "省/州",
+      "carrier": "运营商",
+
+      "domain-list": "指向同-IP的域名列表",
+      "domain": "域名"
+    },
+    "sub-domains":{
+      "title": "子域名",
+      "sub-domains": "子域名",
+      "current-dns-data": "当前DNS数据",
+      "type": "数据类型",
+      "data": "数据内容",
+      "login-tip": "共13个，查看此信息需要确认用户权限，请 登录"
+    },
     "whois": "Whois",
     "certificate": "数字证书",
     "visualization": "可视分析",
