+added json data files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,7 @@
     "IP": {
       "title": "IP",
       "address": "IP address",
+      "ip-counts": "({{ipCounts}} domains share this address)",
       "location": "Location",
       "ASN": "ASN",
 
