--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -47,6 +47,7 @@
     "IP": {
       "title": "IP分析",
       "address": "IP地址",
+      "ip-counts": "（共有 {{ipCounts}} 个域名指向此地址）",
       "location": "地理位置",
       "ASN": "ASN",
 
