--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,7 +69,7 @@
       "current-dns-data": "Current DNS Data",
       "type": "Type",
       "data": "Data",
-      "login-tip": "Total 13, to view the all information, Login"
+      "login-tip": "Total {{total}}, to view the all information, Login"
     },
     "whois": "Whois",
     "certificate": "Certificate",
