+added example data

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -120,7 +120,8 @@
         "name": "Status",
         "valid": "Valid Certificate",
         "unvalid": "Unvalid Certificate"
-      }
+      },
+      "no-data": "No Digital Certificate Information Collected"
     },
     "visualization": "Visualization",
     "community": "Community",
